esljobmap/static/foundation/scss/component/_flow_card.scss
// ==========================================================================
// Flow Card
// ==========================================================================

.flow-card {
    width: 20rem;
    min-height: 20rem;
    margin: 1rem 0;
    min-width: 230px;
    border-radius: 2px;
    border: 1px solid #b6b6b6;
    box-shadow: 0.1px 0.1px 0.1px 0.1px black;

    img {
        position: absolute;
        left: 0;
        top: 0.2rem;
        width: 40px;
        height: 40px;
    }

    h5 {
        background-color: nth($brand-disabled, 2);
        border-bottom: 1px solid #b6b6b6;
        border-radius: 5px 5px 0 0;
        position: relative;
        padding: 0.6rem 0;
        font-weight: bold;
        text-align: center;
        color: white;
        overflow: hidden;

        span {
            width: 85%;
            display: inline-block;
            margin-left: 2rem;
        }
    }

    &.full-time h5 {
        color: $koco-full-time;
    }

    &.part-time h5 {
        color: $koco-part-time;
    }

    .flow-card-content {
        height: 14rem;
        padding: 0.5rem;
        > div {
            overflow: hidden;
            max-height: 3rem;
            position: relative;
        }

        // Foundation override
        .has-tip {
            position: absolute;
            bottom: 0;
            right: 0;
        }
    }

    .flow-card-footer {
        padding: 0.5rem;
    }

    .taken-down {
        width: 9rem;
    }

    @include breakpoint(medium down) {
        margin: 1rem auto;
    }
}

